capa-bff-domain-hjson/src/main/resources/antlr/CustomerJsonParser.java
// Generated from CustomerJson.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CustomerJsonParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, STRING=15, NUMBER=16, 
		WS=17;
	public static final int
		RULE_customerJson = 0, RULE_service = 1, RULE_serviceId = 2, RULE_serviceBody = 3, 
		RULE_requestObj = 4, RULE_requestId = 5, RULE_requestValue = 6, RULE_requestHeaderObj = 7, 
		RULE_singleRequestHeaderField = 8, RULE_requestBody = 9, RULE_requestBodyItem = 10, 
		RULE_singleRequestField = 11, RULE_requestJson = 12, RULE_obj = 13, RULE_pair = 14, 
		RULE_arr = 15, RULE_responseBody = 16, RULE_singleResponseField = 17, 
		RULE_singleRequestFieldValue = 18, RULE_singleResponseFieldValue = 19, 
		RULE_singlerequestHeaderFieldValue = 20, RULE_value = 21, RULE_requestHeaderObjValue = 22, 
		RULE_requestHeaderPair = 23, RULE_requestHeaderArr = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"customerJson", "service", "serviceId", "serviceBody", "requestObj", 
			"requestId", "requestValue", "requestHeaderObj", "singleRequestHeaderField", 
			"requestBody", "requestBodyItem", "singleRequestField", "requestJson", 
			"obj", "pair", "arr", "responseBody", "singleResponseField", "singleRequestFieldValue", 
			"singleResponseFieldValue", "singlerequestHeaderFieldValue", "value", 
			"requestHeaderObjValue", "requestHeaderPair", "requestHeaderArr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "','", "'}'", "':'", "'['", "']'", "'('", "'request'", "'requestHeader'", 
			"'response'", "')'", "'true'", "'false'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "STRING", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CustomerJson.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CustomerJsonParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class CustomerJsonContext extends ParserRuleContext {
		public List<ServiceContext> service() {
			return getRuleContexts(ServiceContext.class);
		}
		public ServiceContext service(int i) {
			return getRuleContext(ServiceContext.class,i);
		}
		public CustomerJsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_customerJson; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterCustomerJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitCustomerJson(this);
		}
	}

	public final CustomerJsonContext customerJson() throws RecognitionException {
		CustomerJsonContext _localctx = new CustomerJsonContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_customerJson);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			match(T__0);
			setState(51);
			service();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(52);
				match(T__1);
				setState(53);
				service();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceContext extends ParserRuleContext {
		public ServiceIdContext serviceId() {
			return getRuleContext(ServiceIdContext.class,0);
		}
		public ServiceBodyContext serviceBody() {
			return getRuleContext(ServiceBodyContext.class,0);
		}
		public ServiceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_service; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitService(this);
		}
	}

	public final ServiceContext service() throws RecognitionException {
		ServiceContext _localctx = new ServiceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_service);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			serviceId();
			setState(62);
			match(T__3);
			setState(63);
			serviceBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceIdContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public ServiceIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterServiceId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitServiceId(this);
		}
	}

	public final ServiceIdContext serviceId() throws RecognitionException {
		ServiceIdContext _localctx = new ServiceIdContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_serviceId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ServiceBodyContext extends ParserRuleContext {
		public List<RequestObjContext> requestObj() {
			return getRuleContexts(RequestObjContext.class);
		}
		public RequestObjContext requestObj(int i) {
			return getRuleContext(RequestObjContext.class,i);
		}
		public ServiceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterServiceBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitServiceBody(this);
		}
	}

	public final ServiceBodyContext serviceBody() throws RecognitionException {
		ServiceBodyContext _localctx = new ServiceBodyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_serviceBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__4);
			setState(68);
			requestObj();
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(69);
				match(T__1);
				setState(70);
				requestObj();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestObjContext extends ParserRuleContext {
		public RequestIdContext requestId() {
			return getRuleContext(RequestIdContext.class,0);
		}
		public RequestValueContext requestValue() {
			return getRuleContext(RequestValueContext.class,0);
		}
		public RequestObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestObj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestObj(this);
		}
	}

	public final RequestObjContext requestObj() throws RecognitionException {
		RequestObjContext _localctx = new RequestObjContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_requestObj);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			requestId();
			setState(79);
			match(T__3);
			setState(80);
			requestValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestIdContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public RequestIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestId(this);
		}
	}

	public final RequestIdContext requestId() throws RecognitionException {
		RequestIdContext _localctx = new RequestIdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_requestId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestValueContext extends ParserRuleContext {
		public RequestJsonContext requestJson() {
			return getRuleContext(RequestJsonContext.class,0);
		}
		public ResponseBodyContext responseBody() {
			return getRuleContext(ResponseBodyContext.class,0);
		}
		public RequestHeaderObjContext requestHeaderObj() {
			return getRuleContext(RequestHeaderObjContext.class,0);
		}
		public RequestValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestValue(this);
		}
	}

	public final RequestValueContext requestValue() throws RecognitionException {
		RequestValueContext _localctx = new RequestValueContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_requestValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__6);
			setState(85);
			match(T__7);
			setState(86);
			match(T__3);
			setState(87);
			requestJson();
			setState(88);
			match(T__1);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8) {
				{
				setState(89);
				match(T__8);
				setState(90);
				match(T__3);
				setState(91);
				requestHeaderObj();
				setState(92);
				match(T__1);
				}
			}

			setState(96);
			match(T__9);
			setState(97);
			match(T__3);
			setState(98);
			responseBody();
			setState(99);
			match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestHeaderObjContext extends ParserRuleContext {
		public List<SingleRequestHeaderFieldContext> singleRequestHeaderField() {
			return getRuleContexts(SingleRequestHeaderFieldContext.class);
		}
		public SingleRequestHeaderFieldContext singleRequestHeaderField(int i) {
			return getRuleContext(SingleRequestHeaderFieldContext.class,i);
		}
		public RequestHeaderObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestHeaderObj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestHeaderObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestHeaderObj(this);
		}
	}

	public final RequestHeaderObjContext requestHeaderObj() throws RecognitionException {
		RequestHeaderObjContext _localctx = new RequestHeaderObjContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_requestHeaderObj);
		int _la;
		try {
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101);
				match(T__0);
				setState(102);
				singleRequestHeaderField();
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(103);
					match(T__1);
					setState(104);
					singleRequestHeaderField();
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				match(T__0);
				setState(113);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRequestHeaderFieldContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public SinglerequestHeaderFieldValueContext singlerequestHeaderFieldValue() {
			return getRuleContext(SinglerequestHeaderFieldValueContext.class,0);
		}
		public SingleRequestHeaderFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRequestHeaderField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleRequestHeaderField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleRequestHeaderField(this);
		}
	}

	public final SingleRequestHeaderFieldContext singleRequestHeaderField() throws RecognitionException {
		SingleRequestHeaderFieldContext _localctx = new SingleRequestHeaderFieldContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_singleRequestHeaderField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(STRING);
			setState(117);
			match(T__3);
			setState(118);
			singlerequestHeaderFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestBodyContext extends ParserRuleContext {
		public List<RequestBodyItemContext> requestBodyItem() {
			return getRuleContexts(RequestBodyItemContext.class);
		}
		public RequestBodyItemContext requestBodyItem(int i) {
			return getRuleContext(RequestBodyItemContext.class,i);
		}
		public RequestBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestBody(this);
		}
	}

	public final RequestBodyContext requestBody() throws RecognitionException {
		RequestBodyContext _localctx = new RequestBodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_requestBody);
		int _la;
		try {
			setState(133);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(T__0);
				setState(121);
				requestBodyItem();
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(122);
					match(T__1);
					setState(123);
					requestBodyItem();
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				match(T__0);
				setState(132);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestBodyItemContext extends ParserRuleContext {
		public List<SingleRequestFieldContext> singleRequestField() {
			return getRuleContexts(SingleRequestFieldContext.class);
		}
		public SingleRequestFieldContext singleRequestField(int i) {
			return getRuleContext(SingleRequestFieldContext.class,i);
		}
		public List<RequestBodyItemContext> requestBodyItem() {
			return getRuleContexts(RequestBodyItemContext.class);
		}
		public RequestBodyItemContext requestBodyItem(int i) {
			return getRuleContext(RequestBodyItemContext.class,i);
		}
		public RequestBodyItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestBodyItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestBodyItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestBodyItem(this);
		}
	}

	public final RequestBodyItemContext requestBodyItem() throws RecognitionException {
		RequestBodyItemContext _localctx = new RequestBodyItemContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_requestBodyItem);
		int _la;
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__0);
				setState(136);
				singleRequestField();
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(137);
					match(T__1);
					setState(138);
					singleRequestField();
					}
					}
					setState(143);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(144);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				match(T__0);
				setState(147);
				requestBodyItem();
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(148);
					match(T__1);
					setState(149);
					requestBodyItem();
					}
					}
					setState(154);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(155);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(157);
				match(T__0);
				setState(158);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleRequestFieldContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public SingleRequestFieldValueContext singleRequestFieldValue() {
			return getRuleContext(SingleRequestFieldValueContext.class,0);
		}
		public SingleRequestFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleRequestField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterSingleRequestField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitSingleRequestField(this);
		}
	}

	public final SingleRequestFieldContext singleRequestField() throws RecognitionException {
		SingleRequestFieldContext _localctx = new SingleRequestFieldContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_singleRequestField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(STRING);
			setState(162);
			match(T__3);
			setState(163);
			singleRequestFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestJsonContext extends ParserRuleContext {
		public SingleRequestFieldValueContext singleRequestFieldValue() {
			return getRuleContext(SingleRequestFieldValueContext.class,0);
		}
		public RequestJsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestJson; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterRequestJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitRequestJson(this);
		}
	}

	public final RequestJsonContext requestJson() throws RecognitionException {
		RequestJsonContext _localctx = new RequestJsonContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_requestJson);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			singleRequestFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjContext extends ParserRuleContext {
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public ObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obj; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitObj(this);
		}
	}

	public final ObjContext obj() throws RecognitionException {
		ObjContext _localctx = new ObjContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_obj);
		int _la;
		try {
			setState(180);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				match(T__0);
				setState(168);
				pair();
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(169);
					match(T__1);
					setState(170);
					pair();
					}
					}
					setState(175);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(176);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				match(T__0);
				setState(179);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(CustomerJsonParser.STRING, 0); }
		public SingleRequestFieldValueContext singleRequestFieldValue() {
			return getRuleContext(SingleRequestFieldValueContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitPair(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(STRING);
			setState(183);
			match(T__3);
			setState(184);
			singleRequestFieldValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrContext extends ParserRuleContext {
		public List<SingleRequestFieldValueContext> singleRequestFieldValue() {
			return getRuleContexts(SingleRequestFieldValueContext.class);
		}
		public SingleRequestFieldValueContext singleRequestFieldValue(int i) {
			return getRuleContext(SingleRequestFieldValueContext.class,i);
		}
		public ArrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).enterArr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CustomerJsonListener ) ((CustomerJsonListener)listener).exitArr(this);
		}
	}

	public final ArrContext arr() throws RecognitionException {
		ArrContext _localctx = new ArrContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_arr);
		int _la;
		try {
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				match(T__4);
				setState(187);
				singleRequestFieldValue();
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(188);
					match(T__1);
					setState(189);
					singleRequestFieldValue();
					}
					}
					setState(194);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(195);
				match(T__5);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(197);
				match(T__4);
				setState(198);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
